# BSP-pattern

./: .gitignore  CMakeLists.txt  CMakeLists_testable.txt  Makefile  README.md  deliver.sh  measurements
0_deliverble_spm19-dimauro.backup/: CMakeLists.txt
0_deliverble_spm19-dimauro.backup/include/: lockableVector.hpp  superstep.hpp  superstep_both_impl.hpp
0_deliverble_spm19-dimauro.backup/tests/: barrierTester.cpp  queueTester.cpp  superstepTester.cpp
TiskinTester/: 06.11_original  06.11_refactored  averager.sh  seddedTimes  speedupper.sh  times
TiskinTester/06.11/: averager.sh  results_128  results_16  results_64
TiskinTester/06.11/gnuplot/: plot_CT.plot  plot_E.plot  plot_S.plot  plot_Sup.plot
TiskinTester/06.11_2.25/: results_128  results_256  results_32  results_4  results_512  results_64
TiskinTester/06.11_2.30/: results_1  results_1024  results_2  results_32  results_4  speedupper.sh
TiskinTester/06.11_2.30/gnuplot/: plot_CT.plot  plot_E.plot  plot_S.plot  plot_Sup.plot
TiskinTester/06.16_2.25/: results_128  results_2  results_256  results_4
TiskinTester/06.16_2.30/: results_1  results_128  results_16  results_32  results_512  results_8
TiskinTester/gnuplot/: plot_CT.plot  plot_E.plot  plot_S.plot  plot_Sup.plot
TiskinTester/gnuplot_src/: plot_CT.plot  plot_E.plot  plot_S.plot  plot_Sup.plot
TiskinTester/results_06.11_2.25/: results_1  results_1024  results_16  results_2  results_8
TiskinTester/results_06.11_2.30/: results_256  results_512  results_8
TiskinTester/results_06.16_2.25/: results_1  results_16  results_32  results_512  results_64  results_8
TiskinTester/results_06.16_2.30/: results_2  results_256  results_4  results_64
bspTestEvalResults/: README.md  testRun_16_16  testRun_1_1  testRun_2_1  testRun_32_32  testRun_8_8
bspTestEvalResults/gnuplot_src/: plot_CT.plot  plot_E.plot  plot_S.plot  plot_Sup.plot
bspTestEvalResults/results_06.07/: testRun_16_8  testRun_2_2  testRun_32_16  testRun_4_4  testRun_8_4
bspTestEvalResults/results_06.08/: testRun_16_16  testRun_16_8  testRun_1_1  testRun_2_1  testRun_2_2  testRun_32_16  testRun_32_32  testRun_4_4  testRun_8_4  testRun_8_8
bspTestEvalResults/results_06.13/: testRun_12_8  testRun_16_10  testRun_16_12  testRun_16_14  testRun_16_16  testRun_16_8  testRun_18_16  testRun_1_1  testRun_20_16  testRun_22_16  testRun_24_16  testRun_26_16  testRun_28_16  testRun_2_1  testRun_2_2  testRun_30_16  testRun_32_16  testRun_4_4  testRun_8_4  testRun_8_8
delivered/include/: barrier.hpp  lockableVector.hpp  uTimer.hpp  workerThread.hpp
delivered/src/: tiskin.cpp  uTimer.cpp
include/: barrier.hpp  bsp.hpp  bsp_both_impl.hpp  concurrentQueue.hpp  lockableVector.hpp  superstep.hpp  uTimer.hpp  workerThread.hpp
src/: barrier.cpp  queueTester.cpp  tiskin.cpp  tiskinTester.cpp  tiskinTrial.cpp  tsikin.cpp  tsikinTrial.cpp  uTimer.cpp  workerThread.cpp
tests/: bspTester.cpp  bsp_executor.sh  bsp_testRunner.sh  executor.sh  lockableVectorTester.cpp  performanceEvaluator.cpp  superstepTester.cpp  superstepTester2.cpp  testRunner.sh  tiskin_executor.sh  tiskin_testRunner.sh  workerTester.cpp
tiskinTestEvalResults/results_06.10/: testRun_256_20  testRun_256_22  testRun_256_23  testRun_256_24  testRun_256_26  testRun_256_27  testRun_256_28  testRun_256_29  testRun_256_30  testRun_64_18  testRun_64_19  testRun_64_20  testRun_64_22  testRun_64_24  testRun_64_26  testRun_p_128  testRun_p_256  testRun_p_32  testRun_p_512  testRun_p_64
with_integrations/: CMakeLists.txt  runner.sh
with_integrations/include/: bsp.hpp  superstep.hpp  uTimer.hpp
with_integrations/results/: extractor.sh
with_integrations/results/07.20/integrations_results/: result_15_1  result_15_128  result_15_16  result_15_2  result_15_256  result_15_32  result_15_4  result_15_512  result_15_64  result_15_8  result_20_1  result_20_128  result_20_16  result_20_2  result_20_256  result_20_32  result_20_4  result_20_512  result_20_64  result_20_8  result_25_1  result_25_128  result_25_16  result_25_2  result_25_256  result_25_32  result_25_4  result_25_512  (+12 more)
with_integrations/results/07.21.2/: result_15_1  result_15_128  result_15_16  result_15_2  result_15_256  result_15_32  result_15_4  result_15_512  result_15_64  result_15_8  result_20_1  result_20_128  result_20_16  result_20_2  result_20_256  result_20_32  result_20_4  result_20_512  result_20_64  result_20_8  result_25_1  result_25_128  result_25_16  result_25_2  result_25_256  result_25_32  result_25_4  result_25_512  result_25_64  result_25_8
with_integrations/src/: tiskin.cpp  uTimer.cpp
with_integrations/tests/: bspTester.cpp
(+44 files in other folders)
